fix stage hostname

--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -1,5 +1,5 @@
 server {
-    server_name rbac.backpacker.loc;
+    server_name rbac.backpacker.loc backpackers.ga;
     root /var/www/public;
 
     location / {
