--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.12",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
         "easycorp/easyadmin-bundle": "^3.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
