--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,11 +1,12 @@
 doctrine:
     dbal:
-        override_url: true
-        url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '13'
+        driver: '%database.driver%'
+        host: '%database.host%'
+        port: '%database.port%'
+        dbname: '%database.name%'
+        user: '%database.user%'
+        password: '%database.password%'
+        charset: UTF8
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
