--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
-    "font-awesome": "^5.15.3",
+    "font-awesome": "fontawesome#v4.7.0",
     "owl.carousel": "^2.3.4",
-    "slick-carousel": "^1.8.1"
+    "angular": "angularjs#^1.8.2",
+    "angular-translate": "^2.18.4",
+    "angular-translate-loader-static-files": "^2.18.4"
   }
 }
