--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "owl.carousel": "^2.3.4",
     "angular": "angularjs#^1.8.2",
     "angular-translate": "^2.18.4",
-    "angular-translate-loader-static-files": "^2.18.4"
+    "angular-translate-loader-static-files": "^2.18.4",
+    "angular-owl-carousel2": "^1.0.7"
   }
 }
