--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -14,3 +14,5 @@ upload_max_filesize = 200M
 date.timezone = Europe/Moscow
 ;заремарить следующую строку, иначе письма будут терять поле FROM
 mail.add_x_header = of
+upload_max_filesize=-1
+post_max_size=-1
