--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "angularjs#^1.8.2",
     "angular-translate": "^2.18.4",
     "angular-translate-loader-static-files": "^2.18.4",
-    "angular-owl-carousel2": "^1.0.7"
+    "angular-owl-carousel2": "^1.0.7",
+    "angular-sanitize": "^1.8.2"
   }
 }
