--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,33 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^2.5",
+        "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.12",
+        "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.8",
         "easycorp/easyadmin-bundle": "^3.2",
+        "nelmio/api-doc-bundle": "^4.2",
+        "nelmio/cors-bundle": "^2.1",
+        "phpdocumentor/reflection-docblock": "^5.2",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
+        "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/intl": "5.1.*",
         "symfony/maker-bundle": "^1.30",
         "symfony/mime": "5.1.*",
         "symfony/monolog-bundle": "^3.7",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
+        "symfony/proxy-manager-bridge": "5.1.*",
+        "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
+        "symfony/twig-bundle": "^5.1",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "config": {
@@ -67,7 +84,6 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/stopwatch": "^5.1",
-        "symfony/twig-bundle": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
     }
 }
