--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -13,6 +13,10 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param PHP_VALUE "xdebug.remote_autostart=1
+        xdebug.remote_enable=1
+        xdebug.remote_host=195.168.0.101";
+        client_max_body_size 0;
         internal;
     }
 
