--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -16,7 +16,7 @@ server {
         fastcgi_param PHP_VALUE "xdebug.remote_autostart=1
         xdebug.remote_enable=1
         xdebug.remote_host=195.168.0.101";
-        client_max_body_size 0;
+        client_max_body_size 999M;
         internal;
     }
 
